Fix off-centered splash image at narrow widths

--- a/styles/modules/_image.sass
+++ b/styles/modules/_image.sass
@@ -55,6 +55,7 @@ img
 
 			> img
 				max-height: 300px
+				margin-left: 0
 
 		&.is-cropped
 			&:after
